--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wikipedia_viewer",
+  "name": "node_api_test",
   "version": "1.0.0",
   "description": "Wikipedia viewer",
   "main": "server.js",
@@ -7,7 +7,8 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js",
+    "test": "node tests/tests.js"
   },
   "repository": {
     "type": "git",
